@@ -23,6 +23,7 @@ Version:
 Date:
     Fixes:
         - Support craft-fluid and scripted research triggers.
+        - Consider quality restrictions when analyzing craft-item or build-item technology triggers.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.16.0
 Date: October 24th 2025
